--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mauron85/react-native-background-geolocation": "^0.6.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "native-base": "^2.13.5",
     "prop-types": "^15.5.10",
     "react": "16.8.6",
