--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "prop-types": "^15.5.10",
     "react": "16.8.6",
     "react-native": "0.60.5",
-    "react-native-maps": "^0.25.0",
+    "react-native-maps": "0.27.1",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^1.0.0-beta.15"
+    "react-navigation": "^1.0.0-beta.15",
+    "styled-components": "^5.1.1"
   }
 }
